chore: 完成配方模块 Serializer 的 NeoForge 1.21 迁移并补充 Javadoc 文档
- MoldDetacherRecipe/MoldWorkbenchRecipe Serializer 从 Gson/FriendlyByteBuf
  迁移到 MapCodec/StreamCodec
- MoldWorkbenchRecipe 对齐 1.21 API（Container→SingleRecipeInput，移除
  ForgeRegistryEntry）
- MoldDetacherRecipe.results 类型从 NonNullList 改为 List，同步修改
  MoldDetacherBlockEntity
- 补充 RecoveryFurnaceRecipe、MoldWorkbenchRecipe、RecipeButtonMixin 等
  类级别 Javadoc 及 Serializer 字段注释
- 修复 ForgeClientEventHandler Javadoc 编码乱码

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>